2011-08-25  Yuta Kitamura  <yutak@chromium.org>

        Let MessageEvent.data hold SerializedScriptValue or String selectively
        https://bugs.webkit.org/show_bug.cgi?id=66841

        Reviewed by Adam Barth.

        MessageEvent from WebSocket contains a String in its "data" attribute, but it does not have
        to be serialized.

        No new tests are added, because this is refactoring and the behavior should not change.

        * bindings/js/JSMessageEventCustom.cpp:
        (WebCore::JSMessageEvent::data):
        To call putAnonymousValue(), "this" needs to be converted to non-const using const_cast<>.
        (WebCore::JSMessageEvent::initMessageEvent):
        Update the cache value as well.
        * bindings/v8/custom/V8MessageEventCustom.cpp:
        (WebCore::V8MessageEvent::dataAccessorGetter):
        ForceSet() is used to cache a value. This is the same as what the code generated by
        CodeGeneratorV8 does.
        (WebCore::V8MessageEvent::initMessageEventCallback):
        * dom/MessageEvent.cpp:
        (WebCore::MessageEvent::MessageEvent):
        (WebCore::MessageEvent::initMessageEvent):
        (WebCore::MessageEvent::data):
        This is only used within the Objective-C bindings (JSC and V8 have the custom functions).
        Since Objective-C code generator does not support [CustomGetter] IDL attribute, there is
        no good way to return a variant value for Objective-C bindings.
        * dom/MessageEvent.h:
        (WebCore::MessageEvent::create):
        (WebCore::MessageEvent::dataType):
        (WebCore::MessageEvent::dataAsSerializedScriptValue):
        (WebCore::MessageEvent::dataAsString):
        * dom/MessageEvent.idl:
        * websockets/WebSocket.cpp:
        (WebCore::WebSocket::didReceiveMessage):
        Construct a MessageEvent without serializing the received message.

2011-08-25  MORITA Hajime  <morrita@google.com>

        Unreviewed, rolling out r93762.